--- a/sass/components/_section-3.scss
+++ b/sass/components/_section-3.scss
@@ -1,14 +1,14 @@
-.container-list {
+.section-3__container-list {
     display: flex;
     flex-wrap: wrap;
     gap: 30px
 }
 
-.product-content {
+.section-3__product-content {
     position: relative;
 }
 
-.product-box {
+.section-3__product-box {
     position: absolute;
     width: 100%;
     height: 70px;
@@ -16,7 +16,7 @@
     bottom: 0;
 }
 
-.product-text {
+.section-3__product-text {
     position: absolute;
     top: 50%;
     left: 50%;
