--- a/css/main.css
+++ b/css/main.css
@@ -43,19 +43,28 @@ body {
 }
 
 .container {
-  width: 1200px;
-  margin-left: auto;
-  margin-right: auto;
-  padding-left: 15px;
   padding-right: 15px;
+  padding-left: 15px;
+  width: 100%;
 }
 
-.main-header {
-  padding-top: 24px;
-  padding-bottom: 25px;
-  border-bottom: 1px solid #ECECEC;
+@media screen and (min-width: 480px) {
+  .container {
+    margin-right: auto;
+    margin-left: auto;
+    width: 480px;
+  }
 }
-
+@media screen and (min-width: 768px) {
+  .container {
+    width: 768px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .container {
+    width: 1200px;
+  }
+}
 .section {
   padding-top: 94px;
 }
@@ -307,18 +316,130 @@ body {
   padding-bottom: 40px;
 }
 
-.menu-list1 {
-  column-gap: 50px;
-  display: flex;
+.nav {
+  display: none;
 }
 
 .menu-list2 {
-  display: flex;
-  column-gap: 50px;
-  margin-left: auto;
+  display: none;
+}
+
+.menu-list2__icon-mail {
+  display: none;
+}
+
+.menu-list2__icon-telef {
+  display: none;
+}
+
+@media screen and (min-width: 768px) {
+  .logo-text {
+    margin-right: 88px;
+  }
+  .open-mobile-menu-btn {
+    display: none;
+  }
+  .nav {
+    display: flex;
+    align-items: center;
+  }
+  .main-header__container {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+  }
+  .menu-list1__link {
+    padding: 32px 0px;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 1.14;
+    letter-spacing: 0.02em;
+    color: #212121;
+    position: relative;
+    transition-property: color;
+    transition-duration: 250ms;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  }
+  .menu-list1__link::after {
+    content: "";
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    background-color: var(--barand-color);
+    border-radius: 2px;
+    width: 100%;
+    height: 4px;
+    display: block;
+    transition-duration: 250ms;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+    transform: scaleX(0);
+  }
+  .menu-list1__link:hover::after, .menu-list1__link:focus::after {
+    transform: scaleX(1);
+  }
+  .menu-list1__link:hover, .menu-list1__link:focus {
+    color: var(--barand-color);
+  }
+  .menu-list1 .active {
+    color: var(--barand-color);
+  }
+  .menu-list1 {
+    column-gap: 50px;
+    display: flex;
+  }
+  .current::after {
+    content: "";
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    background-color: var(--barand-color);
+    border-radius: 2px;
+    width: 100%;
+    height: 4px;
+    display: block;
+    transform: scaleX(1);
+  }
+  .menu-list2__link-header {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    column-gap: 10px;
+    padding: 1px;
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 1.14;
+    letter-spacing: 0.02em;
+    color: #757575;
+    transition-property: color;
+    transition-duration: 250ms;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  }
+  .menu-list2__link-header:hover, .menu-list2__link-header:focus {
+    color: var(--barand-color);
+  }
+  .menu-list2 {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    margin-left: auto;
+  }
+}
+.open-mobile-menu-btn {
+  line-height: 0;
+  border: 0;
+  padding: 0;
+  background-color: transparent;
+}
+
+.open-mobile-menu-btn__icon {
+  width: 40px;
+  height: 40px;
 }
 
 .logo-text {
+  padding-top: 16px;
+  padding-bottom: 16px;
   font-family: "Raleway", sans-serif;
   font-weight: 700;
   font-size: 26px;
@@ -326,94 +447,145 @@ body {
   letter-spacing: 0.03em;
   color: #000;
 }
-.nav .logo-text {
-  margin-right: 93px;
-}
 
 .logo-text-span {
   color: var(--barand-color);
 }
 
-.menu-list1__link {
-  padding: 32px 0px;
-  font-style: normal;
-  font-weight: 500;
-  font-size: 14px;
-  line-height: 1.14;
-  letter-spacing: 0.02em;
-  color: #212121;
+@media screen and (min-width: 1200px) {
+  .logo-text {
+    margin-right: 92px;
+  }
+  .menu-list2 {
+    flex-direction: row;
+    display: flex;
+    column-gap: 50px;
+    margin-left: auto;
+  }
+  .menu-list2__icon-mail {
+    width: 16px;
+    height: 12px;
+    fill: currentColor;
+  }
+  .menu-list2__icon-telef {
+    width: 10px;
+    height: 16px;
+    fill: currentColor;
+  }
+}
+.mobail-menu {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 99999999999999;
+  background-color: #fff;
+  opacity: 0;
+  visibility: hidden;
+  pointer-events: none;
+  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.close-mobile-menu-btn {
+  position: absolute;
+  top: 10px;
+  right: 15px;
+  border: 0;
+  padding: 0;
+  background-color: transparent;
+  line-height: 0;
+}
+
+.close-mobile-menu-btn__icon {
+  width: 40px;
+  height: 40px;
+}
+.close-mobile-menu-btn__icon:hover, .close-mobile-menu-btn__icon:focus {
+  fill: var(--barand-color);
+}
+
+.mobail-menu__container {
   position: relative;
-  transition-property: color;
-  transition-duration: 250ms;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-}
-.menu-list1__link::after {
-  content: "";
-  position: absolute;
-  left: 0;
-  bottom: 0;
-  background-color: var(--barand-color);
-  border-radius: 2px;
-  width: 100%;
-  height: 4px;
-  display: block;
-  transition-duration: 250ms;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-  transform: scaleX(0);
-}
-.menu-list1__link:hover::after, .menu-list1__link:focus::after {
-  transform: scaleX(1);
-}
-.menu-list1__link:hover, .menu-list1__link:focus {
-  color: var(--barand-color);
 }
 
-.menu-list1 .active {
-  color: var(--barand-color);
+.mobail-menu.is-open {
+  opacity: 1;
+  visibility: visible;
+  pointer-events: auto;
 }
 
-.current::after {
-  content: "";
-  position: absolute;
-  left: 0;
-  bottom: 0;
-  background-color: var(--barand-color);
-  border-radius: 2px;
-  width: 100%;
-  height: 4px;
-  display: block;
-  transform: scaleX(1);
-}
-
-.menu-list2__link-header {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  column-gap: 10px;
-  padding: 1px;
+.menu-list-mobaile__link {
   font-weight: 500;
-  font-size: 14px;
-  line-height: 1.14;
-  letter-spacing: 0.02em;
-  color: #757575;
-  transition-property: color;
-  transition-duration: 250ms;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  font-size: 40px;
+  line-height: 47px;
+  letter-spacing: 1.17;
+  color: #212121;
 }
-.menu-list2__link-header:hover, .menu-list2__link-header:focus {
+.menu-list-mobaile__link:hover, .menu-list-mobaile__link:focus {
   color: var(--barand-color);
 }
 
-.menu-list2__icon-mail {
-  width: 16px;
-  height: 12px;
-  fill: currentColor;
+.menu-list-mobaile {
+  display: flex;
+  flex-direction: column;
+  gap: 32px;
+  padding-top: 48px;
+  padding-left: 25px;
+  margin-bottom: 302px;
 }
 
-.menu-list2__icon-telef {
-  width: 10px;
-  height: 16px;
-  fill: currentColor;
+.menu-mobaile-links {
+  display: flex;
+  flex-direction: column;
+  gap: 32px;
+  margin-bottom: 64px;
+  padding-left: 25px;
+}
+
+.menu-mobaile-links__link-header-tel {
+  font-weight: 500;
+  font-size: 34px;
+  line-height: 40px;
+  letter-spacing: 1.17;
+  color: var(--barand-color);
+}
+
+.menu-mobaile-links__link-header-mail {
+  font-weight: 500;
+  font-size: 24px;
+  line-height: 28px;
+  letter-spacing: 1.16;
+  color: #757575;
+}
+.menu-mobaile-links__link-header-mail:hover, .menu-mobaile-links__link-header-mail:focus {
+  color: var(--barand-color);
+}
+
+.menu-social-networks {
+  display: flex;
+  padding-left: 15px;
+  padding-bottom: 48px;
+}
+
+.open-mobile-menu-btn__icon:hover,
+.open-mobile-menu-btn__icon:focus {
+  fill: var(--barand-color);
+}
+
+.menu-social-networks__link {
+  padding-right: 10px;
+  padding-left: 10px;
+  border-right: 1px solid rgba(33, 33, 33, 0.2);
+  font-weight: 500;
+  font-size: 18px;
+  line-height: 22px;
+  letter-spacing: 0.02em;
+  color: var(--barand-color);
+}
+
+.menu-social-networks__link--border {
+  border: 0;
 }
 
 .btn {
@@ -727,13 +899,19 @@ body {
 }
 
 .nav {
-  display: flex;
-  align-items: center;
+  display: none;
 }
 
-.navigation {
+@media screen and (min-width: 768px) {
+  .nav {
+    display: flex;
+    align-items: center;
+  }
+}
+.main-header__container {
   display: flex;
   align-items: center;
+  justify-content: space-between;
 }
 
 .peculiarities {
