--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -1,49 +1,95 @@
-.menu-list1 {
-    column-gap: 50px;
-    display: flex;
+.nav {
+    display: none;
 }
 
 .menu-list2 {
-    display: flex;
-    column-gap: 50px;
-    margin-left: auto;
+    display: none;
+}
+
+.menu-list2__icon-mail{
+    display: none;
+}
+
+.menu-list2__icon-telef{
+    display: none;
 }
 
 
 
-.logo-text {
-    font-family: 'Raleway', sans-serif;
-    font-weight: 700;
-    font-size: 26px;
-    line-height: 1, 19;
-    letter-spacing: 0.03em;
-    color: #000;
+@media screen and(min-width: 768px) {
 
-    .nav & {
-    margin-right: 93px;
+    .logo-text{
+        margin-right: 88px;
     }
-}
 
-.logo-text-span {
-    color: var(--barand-color);
-}
+    .open-mobile-menu-btn {
+        display: none;
+    }
 
-.menu-list1__link {
-    padding: 32px 0px;
+    .nav {
+        display: flex;
+        align-items: center;
+    }
 
-    font-style: normal;
-    font-weight: 500;
-    font-size: 14px;
-    line-height: 1.14;
-    letter-spacing: 0.02em;
-    color: #212121;
-    position: relative;
+    .main-header__container {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+    }
 
-    transition-property: color;
-    transition-duration: 250ms;
-    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+    .menu-list1__link {
+        padding: 32px 0px;
 
-    &::after {
+        font-style: normal;
+        font-weight: 500;
+        font-size: 14px;
+        line-height: 1.14;
+        letter-spacing: 0.02em;
+        color: #212121;
+        position: relative;
+
+        transition-property: color;
+        transition-duration: 250ms;
+        transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+
+        &::after {
+            content: '';
+            position: absolute;
+            left: 0;
+            bottom: 0;
+
+            background-color: var(--barand-color);
+            border-radius: 2px;
+            width: 100%;
+            height: 4px;
+            display: block;
+
+            transition-duration: 250ms;
+            transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+            transform: scaleX(0);
+        }
+
+            &:hover::after,
+            &:focus::after {
+                transform: scaleX(1);
+            }
+
+            &:hover,
+            &:focus{
+                color: var(--barand-color); 
+            }
+    }
+
+    .menu-list1 .active {
+        color: var(--barand-color);
+    }
+    
+    .menu-list1 {
+        column-gap: 50px;
+        display: flex;
+    }
+
+    .current::after {
         content: '';
         position: absolute;
         left: 0;
@@ -54,72 +100,93 @@
         width: 100%;
         height: 4px;
         display: block;
-
-        transition-duration: 250ms;
-        transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-        transform: scaleX(0);
-    }
-
-    &:hover::after,
-    &:focus::after {
         transform: scaleX(1);
     }
 
-    &:hover,
-    &:focus{
-        color: var(--barand-color); 
-    }
+    .menu-list2__link-header {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        column-gap: 10px;
+        padding: 1px;
 
-}
+        font-weight: 500;
+        font-size: 14px;
+        line-height: 1.14;
+        letter-spacing: 0.02em;
+        color: #757575;
+        transition-property: color;
+        transition-duration: 250ms;
+        transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 
-.menu-list1 .active {
-    color: var(--barand-color);
-}
+        &:hover,
+        &:focus {
+        color: var(--barand-color);
+        }       
+    }   
 
-.current::after {
-    content: '';
-    position: absolute;
-    left: 0;
-    bottom: 0;
-
-    background-color: var(--barand-color);
-    border-radius: 2px;
-    width: 100%;
-    height: 4px;
-    display: block;
-    transform: scaleX(1);
-}
-
-.menu-list2__link-header {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    column-gap: 10px;
-    padding: 1px;
-
-    font-weight: 500;
-    font-size: 14px;
-    line-height: 1.14;
-    letter-spacing: 0.02em;
-    color: #757575;
-    transition-property: color;
-    transition-duration: 250ms;
-    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-
-    &:hover,
-    &:focus {
-    color: var(--barand-color);
+    .menu-list2 {
+            display: flex;
+            flex-direction: column;
+            gap: 10px;
+            margin-left: auto;
     }
 }
 
-.menu-list2__icon-mail {
-    width: 16px;
-    height: 12px;
-    fill: currentColor;
+
+.open-mobile-menu-btn {
+    line-height: 0;
+    border: 0;
+    padding: 0;
+    background-color: transparent;
 }
 
-.menu-list2__icon-telef {
-    width: 10px;
-    height: 16px;
-    fill: currentColor;
+.open-mobile-menu-btn__icon {    
+    width: 40px;
+    height: 40px;
+}
+
+.logo-text {
+    padding-top: 16px;
+    padding-bottom: 16px;
+
+    font-family: 'Raleway', sans-serif;
+    font-weight: 700;
+    font-size: 26px;
+    line-height: 1, 19;
+    letter-spacing: 0.03em;
+    color: #000;
+    
+}
+
+.logo-text-span {
+    color: var(--barand-color);
+}
+
+
+@media screen and(min-width: 1200px){
+
+    .logo-text{
+        margin-right: 92px;
+    }
+
+    .menu-list2 {
+        flex-direction: row;
+        display: flex;
+        column-gap: 50px;
+        margin-left: auto;
+    }
+
+    .menu-list2__icon-mail {
+        width: 16px;
+        height: 12px;
+        fill: currentColor;
+    }
+
+    .menu-list2__icon-telef {
+        width: 10px;
+        height: 16px;
+        fill: currentColor;
+    }
+
 }
