--- a/sass/components/_nav.scss
+++ b/sass/components/_nav.scss
@@ -1,10 +1,17 @@
 .nav {
-    display: flex;
-    align-items: center;
+    display: none;
 }
 
-.navigation {
+@media screen and(min-width: 768px) {
+    .nav {
     display: flex;
     align-items: center;
+    }
+}
+
+.main-header__container {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
 }
 
