--- a/sass/main.scss
+++ b/sass/main.scss
@@ -8,6 +8,7 @@
 @import './components/footer-form';
 @import './components/foother';
 @import './components/header';
+@import './components/mobail-menu';
 @import './components/main-portfolio';
 @import './components/modal-form';
 @import './components/nav';
