--- a/sass/utils/_container.scss
+++ b/sass/utils/_container.scss
@@ -1,13 +1,32 @@
+
 .container {
-    width: 1200px;
-    margin-left: auto;
-    margin-right: auto;
-    padding-left: 15px;
     padding-right: 15px;
+    padding-left: 15px;
+    width: 100%;
 }
 
-.main-header {
-    padding-top: 24px;
-    padding-bottom: 25px;
-    border-bottom: 1px solid #ECECEC;
+@media screen and (min-width: 480px) {
+    .container {
+        margin-right: auto;
+        margin-left: auto;
+        width: 480px;
+    }
 }
+
+@media screen and (min-width: 768px) {
+    .container{
+        width: 768px;
+    }
+}
+
+@media screen and (min-width: 1200px) {
+    .container {
+        width: 1200px;
+    }
+}
+
+// .main-header {
+//     padding-top: 24px;
+//     padding-bottom: 25px;
+//     border-bottom: 1px solid #ECECEC;
+// }
