--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -14,12 +14,25 @@
     display: none;
 }
 
+.logo-text {
+    padding-top: 16px;
+    padding-bottom: 16px;
 
+    font-family: 'Raleway', sans-serif;
+    font-weight: 700;
+    font-size: 26px;
+    line-height: 1, 19;
+    letter-spacing: 0.03em;
+    color: #000;
+    
+}
 
 @media screen and(min-width: 768px) {
 
     .logo-text{
         margin-right: 88px;
+        padding-top: 0;
+        padding-bottom: 0;
     }
 
     .open-mobile-menu-btn {
@@ -93,7 +106,7 @@
         content: '';
         position: absolute;
         left: 0;
-        bottom: 0;
+        bottom: -8px;
 
         background-color: var(--barand-color);
         border-radius: 2px;
@@ -105,8 +118,8 @@
 
     .menu-list2__link-header {
         display: flex;
-        align-items: center;
-        justify-content: center;
+        align-items: flex-start;
+        justify-content: flex-start;
         column-gap: 10px;
         padding: 1px;
 
@@ -121,18 +134,38 @@
 
         &:hover,
         &:focus {
-        color: var(--barand-color);
+            color: var(--barand-color);
         }       
     }   
 
     .menu-list2 {
-            display: flex;
-            flex-direction: column;
-            gap: 10px;
-            margin-left: auto;
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+        gap: 10px;
+        margin-left: auto;
+    }
+
+    .menu-list2__icon-mail {
+        display: flex;
+        width: 16px;
+        height: 12px;
+        fill: currentColor;
+    }
+
+    .menu-list2__icon-telef {
+        display: flex;
+        width: 10px;
+        height: 16px;
+        fill: currentColor;
+    }
+
+    .main-header {
+        padding-top: 24px;
+        padding-bottom: 25px;
+        border-bottom: 1px solid #ECECEC;
     }
 }
-
 
 .open-mobile-menu-btn {
     line-height: 0;
@@ -146,19 +179,6 @@
     height: 40px;
 }
 
-.logo-text {
-    padding-top: 16px;
-    padding-bottom: 16px;
-
-    font-family: 'Raleway', sans-serif;
-    font-weight: 700;
-    font-size: 26px;
-    line-height: 1, 19;
-    letter-spacing: 0.03em;
-    color: #000;
-    
-}
-
 .logo-text-span {
     color: var(--barand-color);
 }
@@ -166,24 +186,33 @@
 
 @media screen and(min-width: 1200px){
 
+    .current::after {
+        bottom: 0px;
+    }
+
     .logo-text{
         margin-right: 92px;
+        padding-top: 0;
+        padding-bottom: 0;
     }
 
     .menu-list2 {
         flex-direction: row;
         display: flex;
+        align-items: flex-start;
         column-gap: 50px;
         margin-left: auto;
     }
 
     .menu-list2__icon-mail {
+        display: block;
         width: 16px;
         height: 12px;
         fill: currentColor;
     }
 
     .menu-list2__icon-telef {
+        display: block;
         width: 10px;
         height: 16px;
         fill: currentColor;
