--- a/sass/components/_footer-form.scss
+++ b/sass/components/_footer-form.scss
@@ -1,6 +1,19 @@
 .footer-form {
-    margin-left: auto;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
 }
+
+@media screen and (min-width: 768px) {
+    .footer-form {
+        margin-top: 60px;
+        margin-left: auto;
+        margin-right: auto;
+    }
+}
+
+
 
 .text-footer-form {
     font-weight: 700;
@@ -17,10 +30,11 @@
     margin-bottom: 20px;
 }
 
+
+
 .input-footer-form {
-    width: 368px;
+    width: 450px;
     height: 50px;
-    margin-right: 12px;
     padding-left: 16px;
     font-weight: 400;
     font-size: 16px;
@@ -42,6 +56,13 @@
     }
 }
 
+@media screen and (max-width: 480px) {
+    .input-footer-form {
+        max-width: 200px;
+    }
+    //&
+}
+
 .btn-footer-form {
     width: 200px;
     height: 50px;
@@ -50,6 +71,8 @@
 
 .box-footer-form {
     display: flex;
+    flex-direction: column;
+    gap: 20px;
 }
 
 .box-btn-form {
@@ -60,7 +83,37 @@
     position: absolute;
     width: 24px;
     height: 24px;
-    right: 28px;
+    right: 153px;
     top: 50%;
     transform: translateY(-50%);
+}
+
+@media screen and (min-width: 1200px) {
+    .footer-form {
+        align-items: flex-start;
+        padding-top: 12px;
+        margin-left: auto;
+        margin-right: 0;
+        margin-top: 0;
+    }  
+
+    .box-footer-form {
+        flex-wrap: nowrap;
+        display: flex;
+        flex-direction: row;
+        gap: 12px;
+    }
+
+        .icon-form-footer {
+            position: absolute;
+            width: 24px;
+            height: 24px;
+            right: 28px;
+            top: 50%;
+            transform: translateY(-50%);
+        }
+    
+    .input-footer-form {
+        max-width: 358px;
+    }
 }
