--- a/sass/components/_foother.scss
+++ b/sass/components/_foother.scss
@@ -8,12 +8,26 @@
     display: flex;
     flex-direction: column;
     gap: 9px;
+    align-items: center;
 }
 
 .logo-text-span-dark {
     color: #fff;
 }
 
+
+@media screen and (min-width: 768px) {
+    .box-address {
+            margin-right: 165px;
+            padding-left: 55px;
+    }
+}
+
+@media screen and (max-width: 1200px) {
+        .box-address .logo-text {
+            margin: 0;
+        }
+}
 .contacts__address-text {
     font-style: normal;
     font-weight: 400;
@@ -33,7 +47,14 @@
 }
 
 .box-address {
-    margin-right: 70px
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+@media screen and (max-width: 768px) {
+    
 }
 
 .contacts {
@@ -88,17 +109,44 @@
     fill: #fff;
 }
 
+
+
 .footer-blok-items__text-social-network {
     margin-bottom: 20px;
     font-weight: 700;
     font-size: 14px;
     line-height: 1.14;
     letter-spacing: 0.03em;
+    text-align: center;
     text-transform: uppercase;
     color: #FFFFFF;
 }
 
-.footer-blok-items {
-    padding-top: 12px;
-    padding-bottom: 40px;
+
+
+@media screen and (min-width: 1200px) {
+    .box-address {
+            margin-right: 70px;
+            justify-content: flex-start;
+            align-items: flex-start;
+    }
+
+    .footer-blok-items {
+        padding-top: 12px;
+        padding-bottom: 40px;
+    }
+
+    .footer-blok-items__text-social-network {
+        text-align: left;
+    }
+
+    .contacts__foother-list {
+        align-items: flex-start;
+    }
+
+        @media screen and (min-width: 768px) {
+            .box-address {
+                padding-left: 0;  
+        }
+    }
 }
