--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -14,10 +14,12 @@
     display: none;
 }
 
-.logo-text {
+.logo-text-padd {    
     padding-top: 16px;
     padding-bottom: 16px;
+}
 
+.logo-text {
     font-family: 'Raleway', sans-serif;
     font-weight: 700;
     font-size: 26px;
