--- a/sass/components/_main-portfolio.scss
+++ b/sass/components/_main-portfolio.scss
@@ -26,18 +26,63 @@
 .btn-list {
     display: flex;
     justify-content: center;
+    flex-wrap: wrap;
     gap: 8px;
     margin-bottom: 50px;
 }
 
+@media screen and (max-width: 768px) {
+    .btn-list {
+        justify-content: flex-start;
+        max-width: 430px;
+    }
+}
+
+.img-portfolio {
+    min-width: 450px;
+}
+
 .box-content {
-    flex-basis: calc((100% - 60px) / 3);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-basis: calc((100% - 0px) / 1);
     background-color: #fff;
+}
+
+
+
+@media screen and(min-width: 768px) {
+    .box-content {
+        flex-basis: calc((100% - 30px) / 2);
+    }
+
+    .img-portfolio {
+        min-width: 354px;
+    }
+}
+
+@media screen and(min-width: 1200px) {
+    .box-content {
+        flex-basis: calc((100% - 60px) / 3);
+    }
+
+    .img-portfolio {
+        min-width: 370px;
+    }
+}
+
+@media screen and (max-width: 479px) {
+    .img-portfolio {
+            min-width: 200px;
+    }
 }
 
 .box-content-link {
     text-decoration: none;
-    display: block;
+    display: flex;
+    flex-direction: column;
+    height: 100%;
 
     transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
@@ -46,8 +91,6 @@
     box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
     }
 }
-
-
 
 
 
@@ -116,6 +159,7 @@
     padding-left: 24px;
     padding-right: 24px;
     padding-bottom: 20px;
+    flex-grow: 1;
 
     border: 1px solid #EEEEEE;
     border-top: 0;
