--- a/sass/components/_modal-form.scss
+++ b/sass/components/_modal-form.scss
@@ -14,8 +14,8 @@
 
 .modal {
     position: absolute;
-    width: 528px;
-    height: 580px;
+    width:450px;
+    height: 610px;
     left: 50%;
     top: 50%;
     transform: translate(-50%, -50%);
@@ -23,6 +23,28 @@
     box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
     border-radius: 4px;
     padding: 40px;
+}
+
+// @media screen and(max-width: 479px) {
+//     .modal {
+//         max-height: 610px;
+//         max-width: 450px
+//     }
+// }
+
+@media screen and(min-width: 1200px) {
+    .modal {
+        height: 580px;
+        width: 528px;
+    }
+
+    .modal-form-text {
+        letter-spacing: 0.01em;
+    }
+
+    .text-modal-terms {
+        font-size: 14px;
+    }
 }
 
 .modal-svg {
@@ -104,9 +126,9 @@
 }
 
 .text-modal-terms {
-    font-size: 14px;
+    font-size: 12px;
     line-height: 1.71;
-    letter-spacing: 0.03em;
+    letter-spacing: 0.01em;
     margin-bottom: 0;
 }
 
