--- a/sass/components/_studio-section.scss
+++ b/sass/components/_studio-section.scss
@@ -1,10 +1,18 @@
+
 .text-h {
-    margin-bottom: 50px;
+    margin-bottom: 30px;
     font-weight: 700;
-    font-size: 36px;
+    font-size: 28px;
     line-height: 1.17;
     text-align: center;
     letter-spacing: 0.03em;
+}
+
+@media screen and (min-width: 1200px) {
+    .text-h {
+        margin-bottom: 50px;
+        font-size: 36px;
+    }
 }
 
 .studio-container {
@@ -76,8 +84,20 @@
 
 
 .block-content {
-    flex-basis: calc((100% - 90px) / 4);
+    flex-basis: calc((100% - 0px) / 1);
     background-color: #fff;
     box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
     border-radius: 0px 0px 4px 4px;
+}
+
+@media screen and(min-width: 768px) {
+    .block-content {
+        flex-basis: calc((100% - 60px) / 2);
+    }
+}
+
+@media screen and(min-width: 1200px) {
+    .block-content {
+        flex-basis: calc((100% - 90px) / 4);
+    }
 }
