--- a/sass/utils/_section.scss
+++ b/sass/utils/_section.scss
@@ -1,19 +1,56 @@
 .section {
-    padding-top: 94px;
+    padding-top: 60px;
 }
 
-.section-3 {
-    padding-bottom: 94px;
+@media screen and (max-width:1199px) {
+    .section-bottom {
+        padding-bottom: 60px;
+    }
 }
+
+@media screen and(min-width: 1200px) {
+    .section {
+        padding-top: 94px;
+    }
+}
+
 
 .studio-section {
-    padding-bottom: 94px;
+    padding-bottom: 60px;
     background-color: #F5F4FA;
 }
 
+@media screen and (min-width: 1200px) {
+    .studio-section {
+        padding-bottom: 94px;
+    }
+}
+
+.studio-section-link {
+    padding-bottom: 60px;
+}
 .foother-section {
     display: flex;
-    align-items: baseline;
+}
+
+
+
+
+
+@media screen and (min-width: 768px) {
+    .foother-section {
+        flex-direction: row;
+        align-items: center;
+        flex-wrap: wrap;
+    }
+}
+
+@media screen and (max-width: 768px) {
+    .foother-section {
+        flex-direction: column;
+        align-items: center;
+        gap: 60px;
+    }
 }
 
 .section-csrts {
@@ -21,6 +58,21 @@
     padding-bottom: 96px;
 }
 
-.studio-section-link {
-    padding-bottom: 94px;
+@media screen and (max-width: 1200px) {
+    .section-csrts {
+        padding-top: 60px;
+        padding-bottom: 60px;
+    }
 }
+
+@media screen and (min-width: 1200px) {
+    .studio-section-link {
+        padding-bottom: 94px;
+    }
+
+    .foother-section {
+        align-items: flex-start;
+        justify-content: flex-start;
+    }
+}
+
